# findeck

./: App.js  README.md  fileUpload.js  main.py  start-all.sh  uploadHandler.js  vite.config.js  webpack.config.js
backend/: server.js
frontend/src/: App.js
frontend/src/services/: apiService.js
smartbi-backend-main/: .gitignore  .replit  README.md  README_REPLIT.md  SETUP.md  client.py  package-lock.json  project_requirements.txt  pyproject.toml  requirements.txt
smartbi-backend-main/api/: groq_client.py  income-inequality-by-country-2024.csv  main.py
smartbi-backend-main/api/input_api/: __init__.py  endpoints.py  models.py  schemas.py
smartbi-backend-main/api/llm_api/: README.md  __init__.py  endpoints.py  models.py  schemas.py
smartbi-backend-main/api/mcp_server/: data_exploration_server.py
smartbi-backend-main/server/: README.md  README_TABLE_EXTRACTOR.md  requirements.txt  view_logs.bat  view_logs.sh
smartbifrontend-main/: App.js  app.json  babel.config.js  package-lock.json  package.json  tailwind.config.js
smartbifrontend-main/src/context/: AppContext.js
smartbifrontend-main/src/navigation/: AppNavigator.js
smartbifrontend-main/src/screens/: AnalyticsScreen.js  DashboardScreen.js  DocumentsScreen.js  InsightsScreen.js  SettingsScreen.js
smartbifrontend-main/src/services/: api.js  mockApi.js
smartbifrontend-main/src/utils/: helpers.js  theme.js
src/: uploadFile.js
src/components/: PictureUploader.js
